stylesheets/custom.css
h1, h2, h3, h4, h5, h6, p {color: white}

section {
	margin-bottom: 3px;
	padding: 5%;
}

.top-bar {
	background-color: #5EBDCD;
	margin-bottom: 3px;
}

.top-bar a:hover {
	background-color: #5EBDCD;
}

#team-photo {
	background-color: #C37AB1;
	padding-top: 2%;
	padding-bottom: 2%;
}

#details {
	background-color: #FCC42E;
}

#products {
	background-color: #63C8B6;
	padding-top: 10%;
	padding-bottom: 10%;
}

#enterprise *{
	/*color: #ABA89D;*/
}

#enterprise {
	background-color: #ABA89D;
	padding-top: 10%;
	padding-bottom: 10%;
}


#about-us {
	background-color: rgb(48,48,48);
	padding: 1%;
}

.flat-panel {
	/*background-color: #19BA9B;*/
	padding: 1%;
}

.flat-panel img {
	margin-top: 18px;
}

.product-logo {
	float:left;
	padding-right:3%;
	padding-bottom:3%;
}


.well {
  min-height: 20px;
  margin-bottom: 20px;
  background-color: #f5f5f5;
  border: 1px solid #eee;
  border: 1px solid rgba(0, 0, 0, 0.05);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  padding: 200px 0px;
}
.well blockquote {
  border-color: #ddd;
  border-color: rgba(0, 0, 0, 0.15);
}

/* CUSTOM CSS */

/* Pricing */

.pricing{
  margin: 18px 0;
  border: 0;
  }

.pricehover{
  text-align: center;
  align: center;
}
.pricehover:hover{
-webkit-transform:scale(1.05); 
box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-webkit-transition: all 0.2s linear;
-moz-transition: all 0.2s linear;
-ms-transition: all 0.2s linear;
-o-transition: all 0.2s linear;
transition: all 0.2s linear;
-moz-transform: scale(1.05);
animation-duration: 2s;
animation-timing-function: ease-in-out;
animation-fill-mode: forwards;
cursor: pointer;

}

.pricehover.featured{
-webkit-transform:scale(1.15); 
box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.67);
-webkit-transition: all 0.2s linear;
-moz-transition: all 0.2s linear;
-ms-transition: all 0.2s linear;
-o-transition: all 0.2s linear;
transition: all 0.2s linear;
-moz-transform: scale(1.15);
animation-duration: 2s;
animation-timing-function: ease-in-out;
animation-fill-mode: forwards;
cursor: pointer;

}
.pricehover:hover .price{
background: #333;
display: inline-block;
border:none;
-moz-border-radius: none;
-webkit-border-radius: none;
box-shadow: none;
-webkit-box-shadow: none;
-moz-box-shadow:  none;
}

.pricehover h2{
    color: #FFF;
}

.pricehover:hover h2{
    color: #FFF;
}


.price{
  display: inline-block;
  background: #eaeaea;
  border-top: 2px solid #aaa;
  border-bottom: 2px solid #fff;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  box-shadow:  inset 0px 8px 24px #cbcbcb;
  -webkit-box-shadow:  inset 0px 8px 24px #cbcbcb;
  -moz-box-shadow:  inset 0px 8px 24px #cbcbcb;
  border:none;
 height: 100px;
 -moz-border-radius:75px;
 -webkit-border-radius: 75px;
 width: 100px;
 margin:0 auto;
}
.price.featuredprice{
 background-color: #00CC00;
 border: 3px solid #00CC00;
 height: 100px;
 -moz-border-radius:75px;
 -webkit-border-radius: 75px;
 width: 100px;
 margin:0 auto;
}

.price h2{
  text-align: center; line-height: 100px; color: #fff;
}


*Simple reset*/
* {margin: 0; padding: 0;}

canvas {
  display: block; 
  background: #6b92b9;
}


specialh1 {
   width: 750px;
        font-size: 100px;
        margin: 25px auto;
        text-align: center;
        color: #fff;
        text-shadow: 0px 1px 1px #ddd,
                     0px 2px 1px #d6d6d6,
                     0px 3px 1px #ccc,
                     0px 4px 1px #c5c5c5,
                     0px 5px 1px #c1c1c1,
                     0px 6px 1px #bbb,
                     0px 7px 1px #777,
                     0px 8px 3px rgba(100, 100, 100, 0.4),
                     0px 9px 5px rgba(100, 100, 100, 0.1),
                     0px 10px 7px rgba(100, 100, 100, 0.15),
                     0px 11px 9px rgba(100, 100, 100, 0.2),
                     0px 12px 11px rgba(100, 100, 100, 0.25),
                     0px 13px 15px rgba(100, 100, 100, 0.3);
}

specialh1small {
        position: relative;
        max-width: 100%;
        font-size: 50px;
        margin: 40px auto;
        text-align: center;
        color: #fff;
        text-shadow: 0px 1px 1px #ddd,
                     0px 2px 1px #d6d6d6,
                     0px 2px 1px #ccc,
                     0px 3px 1px #c5c5c5,
                     0px 4px 1px #c1c1c1,
                     0px 5px 1px #bbb,
                     0px 7px 1px #777,
                     0px 4px 1px rgba(100, 100, 100, 0.4),
                     0px 5px 2px rgba(100, 100, 100, 0.1),
                     0px 5px 3px rgba(100, 100, 100, 0.15),
                     0px 6px 4px rgba(100, 100, 100, 0.2),
                     0px 7px 5px rgba(100, 100, 100, 0.25),
                     0px 7px 7px rgba(100, 100, 100, 0.3);
}

